# MiniMed

./: .agent-hardening-status.md  .agent-model-check.md  .agent-model-typecheck.md  .agent-validation-report.md  .bootstrap-actions-started  .bootstrap-archive-diagnostic  .env.example  .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SETUP.md  TREE_API_TEST.txt  biome.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  settings.gradle  tsconfig.base.json  tsconfig.workspace.json  vitest.config.ts
tools/ingest/: README.md  pyproject.toml  repair_primary_module_ownership.py
tools/ingest/prompts/: query-alias-candidate.md  source-structure-review.md
tools/ingest/scripts/: expand_public_drug_pilot.py
tools/ingest/src/localmed_ingest/: __init__.py  builder.py  catalog_module_builder.py  catalog_module_cli.py  cli.py  clinical_catalog.py  clinical_catalog_cli.py  clinical_queries.py  clinical_query_annotations.py  clinical_query_contracts.py  clinical_query_taxonomy.py  drug_sources.py  embedding.py  html_import.py  knowledge.py  knowledge_modules.py  models.py  (+12 more)
tools/ingest/tests/: test_builder.py  test_catalog_module_builder.py  test_clinical_catalog.py  test_clinical_queries.py  test_clinical_query_annotations.py  test_clinical_query_contracts.py  test_drug_sources.py  test_html_import.py  test_ingestion_workspace.py  test_knowledge.py  test_knowledge_modules.py  test_official_clinical_registry.py  test_regulated_catalogs.py  test_regulatory_sections.py  test_source_sync.py
(+424 files in other folders)
