[project]
name = "localmed-ingest"
version = "0.3.0a1"
description = "Deterministic LocalMed content-pack builder"
requires-python = ">=3.12"
dependencies = [
  "pydantic==2.13.4",
  "pymupdf==1.28.0",
  "pyyaml==6.0.3",
  "typer==0.27.0",
]

[project.scripts]
medbase = "localmed_ingest.cli:app"

[dependency-groups]
dev = [
  "pyright==1.1.411",
  "pytest==9.1.1",
  "ruff==0.15.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/localmed_ingest"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["RUF001"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
